# cctools-port

cctools/ar/: CMakeLists.txt  ar.c  archive.c  archive.h
cctools/include/foreign/i386/: endian.h  limits.h  setjmp.h  signal.h  types.h  user_ldt.h
cctools/include/foreign/libkern/: OSAtomic.h  OSCacheControl.h  OSDebug.h  OSKextLib.h  OSReturn.h
cctools/include/foreign/mach/: clock.h  clock_priv.h  exc.h  host_info.h  host_priv.h  host_security.h  ledger.h  lock_set.h  mach.h  mach_host.h  mach_init.h  mach_port.h  mach_time.h  mach_traps.h  mach_types.h  mach_vm.h  memory_object_types.h  message.h  mig.h  mig_errors.h  ndr.h  port.h  processor.h  processor_set.h  shared_memory_server.h  shared_region.h  task_info.h  vm_map.h  vm_region.h
cctools/include/foreign/mach/i386/: task.h
cctools/include/foreign/mach/ppc/: _structs.h  thread_act.h
cctools/include/foreign/ppc/: _structs.h  endian.h  limits.h  setjmp.h  signal.h  types.h
cctools/include/foreign/sys/: _types.h
cctools/include/mach/ppc/: _structs.h
cctools/ld64/src/: CMakeLists.txt
cctools/ld64/src/ld/: Options.cpp
cctools/misc/: CMakeLists.txt
cctools/otool/: notify.h
